k8s/subscriptions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscriptions-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/subscriptions
            pathType: 'Prefix'
            backend:
              service:
                name: subscriptions-service
                port:
                  number: 80
